[package]
name = "twitter_api_rs"
version = "0.0.3"
edition = "2021"
description = "Twitter API in Rust"
license = "MIT"
repository = "https://github.com/thewh1teagle/twitter_api_rs"

[lib]
name = "twitter_api_rs"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dotenv = { version = "0.15.0" }
env_logger = "0.10.1"
eyre = "0.6.12"
log = "0.4.20"
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"] }
reqwest_cookie_store = "0.6.0"
serde = { version="1.0.164", features=["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.50"
tokio = { version = "1", features = ["full"] }

