[package]
name = "x-api-rs"
version = "0.0.4"
edition = "2021"
description = "X/Twitter API in Rust"
license = "MIT"
repository = "https://github.com/thewh1teagle/twitter-api-rs"

[lib]
name = "x_api_rs"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.26"
env_logger = "0.10.1"
eyre = "0.6.12"
log = "0.4.20"
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"] }
reqwest_cookie_store = "0.6.0"
serde = { version="1.0.164", features=["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.50"
tokio = { version = "1", features = ["full"] }

