[package]
name = "x-api-rs"
version = "0.0.5"
edition = "2021"
description = "X/Twitter API in Rust"
license = "MIT"
repository = "https://github.com/thewh1teagle/x-api-rs"

[lib]
name = "x_api_rs"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4.26"
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"] }
reqwest_cookie_store = "0.6.0"
serde = { version="1.0.164", features=["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.50"
eyre = "0.6.12"
tracing = "0.1.40"



[dev-dependencies]
tracing-subscriber = "0.3.18"
dotenvy = "0.15.7"

